app/views/style.sass
*
  font-family: Arial
  

a:active, a:focus
  outline: 0

.awesome, .awesome:visited 
  border: none
  background: #222 url(/images/alert-overlay.png) repeat-x 
  display: inline-block 
  padding: 5px 10px 6px 
  color: #fff 
  text-decoration: none
  -moz-border-radius: 5px 
  -webkit-border-radius: 5px
  -moz-box-shadow: 0 1px 3px rgba(0,0,0,0.5)
  -webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.5)
  text-shadow: 0 -1px 1px rgba(0,0,0,0.25)
  border-bottom: 1px solid rgba(0,0,0,0.25)
  position: relative
  cursor: pointer

.awesome:hover
  background-color: #111
  color: #fff
.awesome:active
  top: 1px
.small.awesome, .small.awesome:visited
  font-size: 11px
  padding: 0
.medium.awesome, .medium.awesome:visited
  font-size: 13px
  font-weight: bold
  line-height: 1
  text-shadow: 0 -1px 1px rgba(0,0,0,0.25)
.large.awesome, .large.awesome:visited
  font-size: 14px
  padding: 8px 14px 9px
.huge.awesome, .huge.awesome:visited
  font-size: 18px
  padding: 15px 30px 15px
.green.awesome, .green.awesome:visited
  background-color: #91bd09
.green.awesome:hover
  background-color: #749a02
.blue.awesome, .blue.awesome:visited
  background-color: #00669D
.blue.awesome:hover
  background-color: #00467D
.red.awesome, .red.awesome:visited
  background-color: #F32100
.red.awesome:hover
  background-color: #A72300
.magenta.awesome, .magenta.awesome:visited
  background-color: #a9014b
.magenta.awesome:hover
  background-color: #630030
.orange.awesome, .orange.awesome:visited
  background-color: #ff5c00
.orange.awesome:hover
  background-color: #d45500
.yellow.awesome, .yellow.awesome:visited
  background-color: #ffb515
.yellow.awesome:hover
  background-color: #fc9200
  
.disabled.awesome
  background-color: #ccc
.disabled.awesome:hover
  background-color: #DDD

blockquote
  margin: 0
  padding: 0
  
ol
  margin: 0
  padding: 0
  margin-left: 3em
  
ul
  margin: 0
  padding: 0
  margin-left: 2em
  
li
  margin: 0.5em 0.25em
.center-title
  font-weight: bold
  font-size: 2em
  text-align: center
.center-subtitle
  font-size: 1.5em
  text-align: center

code
  font-family: monospace

.slide
  float: left
  width: 720px
  height: 405px
  background: #fff
  border: 1px solid #bbb
  border-radius: 5px
  margin: 0 40px
  padding: 0
  font-size: 1.5em
  position: relative
  overflow: hidden
  img
    width: 35%
  h1
    text-align: center
    padding: 0
    margin: 0.75em 0 0.4em 0
    img
      width: 50%
  h3
    font-size: 0.8em
    text-align: center


.tiny-slide, .tiny-slide-demo
  width: 160px
  height: 90px
  font-size: 5px
  background: #fff
  border-radius: 5px
  margin: 5px 5px
  white-space: normal
  padding: 0
  position: relative
  overflow: hidden
  &.selected
    -webkit-box-shadow: 0px 0px 50px yellow
    -moz-box-shadow: 0px 0px 50px yellow
    
  ul
    margin: 0
    padding: 0
    margin-left: 3em
  img
    width: 35%
    max-height: 100%
  h1
    text-align: center
    padding: 0
    margin: 1em 0 0.4em 0
    img
      width: 50%
  h3
    font-size: 0.8em
    text-align: center
#active-slide    
  .slide-object
    min-width: 25px
    min-height: 25px
    border: 1px solid #E5E5E5
    cursor: move
    &.selected
      border: 1px solid #444
      
.slide-object
  overflow: hidden
  

  
.label
  display: inline-block
  width: 130px
  text-align: left
  padding-left: 50px
  
.textfield
  width: 250px
  height: 20px
  font-size: 14px
  padding-left: 2px
  padding-right: 2px
  &.valid-input
    background: url("/images/valid.png") no-repeat right center
  &.invalid-input
    background: url("/images/invalid.png") no-repeat right center

.template-chooser
  border-radius: 5px
  padding: 10px
  width: 350px
  background: rgba(0,0,0, 0.8)
  position: absolute
  top: 35px
  left: 480px
  border: 2px solid #DDD
  z-index: 1000
  text-align: center
  -moz-box-shadow: 0 0 20px rgba(0,0,0,0.5)
  -webkit-box-shadow: 0 0 20px rgba(0,0,0,0.5)
  display: none
  
.edit-overlay
  border-radius: 5px
  padding: 10px
  background: rgba(0,0,0, 0.8)
  position: absolute
  top: 0
  left: 0
  z-index: 1002
  -moz-box-shadow: 0 0 5px rgba(0,0,0,0.5)
  -webkit-box-shadow: 0 0 5px rgba(0,0,0,0.5)
  display: none
  color: white
  white-space: normal
  
.colorpicker
  border-radius: 5px
  padding: 10px
  background: rgba(0,0,0, 0.8)
  position: absolute
  top: 0
  left: 0
  z-index: 1003
  -moz-box-shadow: 0 0 5px rgba(0,0,0,0.5)
  -webkit-box-shadow: 0 0 5px rgba(0,0,0,0.5)
  display: none
  color: white
  white-space: normal
  
.image-chooser
  border-radius: 5px
  padding: 10px
  background: rgba(0,0,0, 0.95)
  position: absolute
  width: 575px
  height: 300px
  top: 75px
  left: 75px
  z-index: 1002
  -moz-box-shadow: 0 0 5px rgba(0,0,0,0.5)
  -webkit-box-shadow: 0 0 5px rgba(0,0,0,0.5)
  display: none
  color: white
  white-space: normal

.ico-text
  display: inline-block
  background: #fff
  border: 1px solid #fff
  width: 16px
  height: 16px
  padding: 3px
  &.left-align
    background: #ddd url("/images/icons/text_align_left.png") no-repeat 3px 3px
    border-radius: 3px 0 0 3px
    border-right: none
    &.selected
      background: #5dc5fe url("/images/icons/text_align_left.png") no-repeat 3px 3px
  &.center-align
    background: #ddd url("/images/icons/text_align_center.png") no-repeat 3px 3px
    border-radius: 0
    &.selected
      background: #5dc5fe url("/images/icons/text_align_center.png") no-repeat 3px 3px
  &.right-align
    background: #ddd url("/images/icons/text_align_right.png") no-repeat 3px 3px
    border-radius: 0 3px 3px 0
    border-left: none
    &.selected
      background: #5dc5fe url("/images/icons/text_align_right.png") no-repeat 3px 3px
  &.bold
    border-radius: 3px 0 0 3px
    border-right: none
    background: #ddd url("/images/icons/text_bold.png") no-repeat 3px 3px
    &.selected
      background: #5dc5fe url("/images/icons/text_bold.png") no-repeat 3px 3px
    
  &.italic
    border-radius: 0
    background: #ddd url("/images/icons/text_italic.png") no-repeat 3px 3px
    &.selected
      background: #5dc5fe url("/images/icons/text_italic.png") no-repeat 3px 3px
    
  &.underline
    border-radius: 0 3px 3px 0
    border-left: none
    background: #ddd url("/images/icons/text_underline.png") no-repeat 3px 3px
    &.selected
      background: #5dc5fe url("/images/icons/text_underline.png") no-repeat 3px 3px
    
  
      
.ico-colorpicker
  display: inline-block
  background: #fff
  width: 18px
  height: 18px
  padding: 3px
  margin-left: 10px
  border-radius: 3px
  background: #555 url("/images/icons/color_wheel.png") no-repeat 4px 4px
  &:hover
    background: #BBB url("/images/icons/color_wheel.png") no-repeat 4px 4px
  &:active
    background: #999 url("/images/icons/color_wheel.png") no-repeat 4px 4px
  
  
  
.login-form
  width: 220px
  height: 100px
  padding: 20px
  background: #fff
  border-radius: 5px
  margin: auto



html, body 
  height: 95%


.humanMsg 
  font: normal 20px/50px Helvetica, Arial, Sans-Serif
  letter-spacing: -1px
  position: fixed
  top: 135px
  left: 49%
  width: 20%
  color: white
  background-color: black
  text-align: center 
  display: none
  opacity: 0
  z-index: 100000
  border-radius: 5px

  

.humanMsg p 
  padding: .3em
  display: inline 
  

.humanMsg a 
  display: none
  
  
#humanMsgLog 
  font: normal 10px Helvetica, Arial, Sans-Serif
  color: white
  position: fixed
  bottom: 0
  left: 0
  width: 100%
  max-height: 200px
  display: none
  z-index: 10000
  

#humanMsgLog p 
  position: relative
  left: 50%
  width: 200px
  margin: 0
  margin-left: -100px
  padding: 0 10px
  line-height: 20px
  background: #333
  text-align: center
  white-space: pre
  cursor: pointer
  

#humanMsgLog p:hover 
  background: #222
  

#humanMsgLog ul 
  background: #eee url(data:image/pngbase64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAARCAIAAACaSvE/AAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAE1JREFUeNqEjVEKACAIQ516Ee//5wVNCjIjaB/iY5vC3YkoIgDkVDOjQ5pqLCI3r2bLFzNzyydvM4uKqfJPKN4vyl9LO/7o3/6PhwADAIWkFPjc5eRrAAAAAElFTkSuQmCC) repeat-x
  margin: 0
  padding: 0
  position: relative
  max-height: 180px
  overflow: auto
  display: none
  

#humanMsgLog ul li 
  color: #555
  font-size: 12px
  list-style-type: none
  border-bottom: 1px solid #ddd
  line-height: 40px
  display: none
  padding: 0 20px
  position: relative
  overflow: hidden
  white-space: pre
  

#humanMsgLog ul li:hover
  background: #f2f2f2

#humanMsgLog ul li:first-child
  margin-top: 1px
  
  
#humanMsgLog ul li .error
  color: orangered

#humanMsgLog ul li .indent
  position: absolute
  top: 0
  left: 100px
  margin-right: 200px
  height: inherit
  
  
.farbtastic
  position: relative
  
.farbtastic *
  position: absolute
  cursor: crosshair

.farbtastic, .farbtastic .wheel
  width: 195px
  height: 195px

.farbtastic .color, .farbtastic .overlay 
  top: 47px
  left: 47px
  width: 101px
  height: 101px

.farbtastic .wheel
  background: url(/images/wheel.png) no-repeat
  width: 195px
  height: 195px

.farbtastic .overlay
  background: url(/images/mask.png) no-repeat

.farbtastic .marker
  width: 17px
  height: 17px
  margin: -8px 0 0 -8px
  overflow: hidden 
  background: url(/images/marker.png) no-repeat


  

